--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
     <main>
       <img src="./images/image-qr-code.png" alt="qr-code" id="qr" />
 
-      <p id="text-1">Improve your front-end skills by building projects</p>
+      <h1 id="text-1">Improve your front-end skills by building projects</h1>
       <p id="text-2">
         Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
     </main>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/M4R0C4">M4R0C4</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/M4R0C4">M4R0C4</a>.
+      </div>
+    </footer>
   </body>
 </html>
